--- a/public/index.html
+++ b/public/index.html
@@ -3,42 +3,138 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon-180x180" />
+  <link
+    rel="icon"
+    href="%PUBLIC_URL%/favicon.ico"
+  />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1"
+  />
+  <meta
+    name="theme-color"
+    content="#000000"
+  />
+  <link
+    rel="apple-touch-icon"
+    href="%PUBLIC_URL%/apple-icon-180x180"
+  />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.jon" />
-  <meta name="description" content="Interact, Share, Learn with our UI Design Community">
-  <meta name="keywords" content="UI, Design, Share, Image, Interface">
+  <link
+    rel="manifest"
+    href="%PUBLIC_URL%/manifest.jon"
+  />
+  <meta
+    name="description"
+    content="Interact, Share, Learn with our UI Design Community"
+  >
+  <meta
+    name="keywords"
+    content="UI, Design, Share, Image, Interface"
+  >
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+    rel="stylesheet"
+  >
+  <link
+    href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
+    rel="stylesheet"
+  >
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap"
+    rel="stylesheet"
+  >
 
-  <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <meta name="msapplication-TileColor" content="#000000">
-  <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ms-icon-144x144.png">
+  <link
+    rel="apple-touch-icon"
+    sizes="57x57"
+    href="%PUBLIC_URL%/apple-icon-57x57.png"
+  >
+  <link
+    rel="apple-touch-icon"
+    sizes="60x60"
+    href="%PUBLIC_URL%/apple-icon-60x60.png"
+  >
+  <link
+    rel="apple-touch-icon"
+    sizes="72x72"
+    href="%PUBLIC_URL%/apple-icon-72x72.png"
+  >
+  <link
+    rel="apple-touch-icon"
+    sizes="76x76"
+    href="%PUBLIC_URL%/apple-icon-76x76.png"
+  >
+  <link
+    rel="apple-touch-icon"
+    sizes="114x114"
+    href="%PUBLIC_URL%/apple-icon-114x114.png"
+  >
+  <link
+    rel="apple-touch-icon"
+    sizes="120x120"
+    href="%PUBLIC_URL%/apple-icon-120x120.png"
+  >
+  <link
+    rel="apple-touch-icon"
+    sizes="144x144"
+    href="%PUBLIC_URL%/apple-icon-144x144.png"
+  >
+  <link
+    rel="apple-touch-icon"
+    sizes="152x152"
+    href="%PUBLIC_URL%/apple-icon-152x152.png"
+  >
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="%PUBLIC_URL%/apple-icon-180x180.png"
+  >
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="192x192"
+    href="%PUBLIC_URL%/android-icon-192x192.png"
+  >
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="%PUBLIC_URL%/favicon-32x32.png"
+  >
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="96x96"
+    href="%PUBLIC_URL%/favicon-96x96.png"
+  >
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="%PUBLIC_URL%/favicon-16x16.png"
+  >
+  <link
+    rel="manifest"
+    href="%PUBLIC_URL%/manifest.json"
+  >
+  <meta
+    name="msapplication-TileColor"
+    content="#000000"
+  >
+  <meta
+    name="msapplication-TileImage"
+    content="%PUBLIC_URL%/ms-icon-144x144.png"
+  >
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-    rel="stylesheet" />
-  <title>UIGram</title>
+    rel="stylesheet"
+  />
+  <title>DesignSpace</title>
 </head>
 
 <body class="scrollbar">
